product-landing-page/main.css
@import url('https://fonts.googleapis.com/css?family=Roboto:300');

:root {
    --background-color: rgb(85, 214, 170)
}

*, *::before, *::after {
    box-sizing: border-box;
}

body {
    margin: 0 auto;
    background-color: #222;
    font-family: 'Roboto', sans-serif;
}

#container {
    display: grid;
    height: 100%;
}

#header {
    background-color: var(--background-color);
    text-align: center;
    position: fixed;
    z-index: 999;
    width: 100%;
}

#header-img {
    display: none;
}

.logo {
    text-transform: uppercase;
    color: white;
}

.nav-toggle {
    display: none;
}

.nav-toggle-label {
    position: absolute;
    top: 0;
    right: 0;
    margin-right: 1em;
    height: 100%;
    display: flex;
    align-items: center;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background-color: white;
    height: 2px;
    width: 2em;
    border-radius: 2px;
    position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;
}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}

nav {
    position: absolute;
    text-align: right;
    top: 100%;
    left: 0;
    background: var(--background-color);
    width: 100%;
    transform: scale(1, 0);
    transform-origin: top;
    transition: transform 400ms ease-in-out;
}

nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

nav li {
    margin-bottom: 1em;
    margin-right: 1em;
}

nav a {
    color: white;
    text-decoration: none;
    font-size: 1.2rem;
    text-transform: uppercase;
    opacity: 0;
    transition: opacity 150ms ease-in-out;
}

nav a:hover{
    color: black;
}

.nav-toggle:checked ~ nav {
    transform: scale(1, 1)
}

.nav-toggle:checked ~ nav a {
    opacity: 1;
    transition: opacity 250ms ease-in-out 300ms;
}


.opener {
    margin-top: 85px;
    text-align: center;
}

/* 
Video 
*/

iframe {
   margin-top: 90px; 
}


/* 
Feature section
*/

.prod-features {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 40px auto;
    max-width: 1000px;
    padding: 20px;
}

.feature {
    text-align: center;
    color: white;
    flex-wrap: wrap;
    flex: 1;
    margin: 25px;
}

.feat-img {
    min-width: 40%;
    min-height: 60%;
    max-width: 30%;
    max-height: 50%;
}

/* 
Pricing section
*/

.option ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }
  
.option ul li {
    border-bottom: 1px solid rgba(0,0,0,0.1);
    padding:10px;
}

.option ul li:last-child {
    border-bottom: 0;
}

.option a {
    text-decoration: none;
    background: var(--background-color);;
    padding:10px;
    color:white;
    border-radius:4px;
}


.option h2 {
    text-transform: uppercase;
    color:white;
    letter-spacing: 2px;
    text-shadow:3px 3px 0 rgba(0,0,0,0.1);
}

.price {
    font-size: 50px;
    text-transform: uppercase;
    margin: 10px 0;
    color: white;
}

.option p, li {
    color: white;
}


.pricing {
    max-width: 850px;
    margin: 0 auto;
    padding: 5px 0;
    display: flex;
    align-items: center;
}

.option {
    display: flex;
    flex: 1;
    background: rgba(255, 255, 255, 0.2);
    margin: 5px;
    padding: 20px;
    border-radius: 4px;
    text-align: center;
    flex-wrap: wrap;
}

.option > * {
    flex: 1;
    flex-basis: 100%;
}

.plan .cta {
    align-self: flex-end;
}

.cta:hover {
    transform: scale(1.1);
}

/* 
Contact section
*/

.contact {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    height: 200px;
    text-transform: uppercase;
    margin-top: 40px;
    margin-bottom: 30px;
}

.sign-up-title {
    color: white;
}

form {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.email {
    width: 265px;
    padding: .5em;
    font-size: 1.1em;
    text-align: left;
    border-radius: 4px;
}

.button {
    margin-top: 20px;
    padding: .5em;
    width: 50%;
    font-size: 1.2em;  
    background-color: var(--background-color);
    color: white;
    border: 1px solid var(--background-color);
    border-radius: 4px;
}

.button:hover {
    transform: scale(1.1);
}

/* 
Footer
*/

footer {
    color: white;
    background-color: rgba(255, 255, 255, 0.2);
    text-align: center; 
    padding: 2 0px;
    margin-top: 50px;
}

.footer-content {
    max-width: 60%;
    margin: 0 auto;
}

.link {
    color: white;
}

.link:hover {
    color: var(--background-color);;
}



@media screen and (min-width: 800px) {
    .nav-toggle-label {
        display: none;
    }

    #header {
        display: grid;
        grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
    }

    .logo {
        grid-column: 2 / 3;
    }

    nav {
        all: unset;
        grid-column: 3 / 4;
        display: flex;
        justify-content: flex-end;
        align-items: center;
    }

    nav ul {
        display: flex;
    }

    nav li {
        margin-left: 3em;
        margin-bottom: 0;
    }

    nav a {
        opacity: 1;
        position: relative;
    }

    nav a::before{
        content: '';
        display: block;
        height: 5px;
        background: black;
        position: absolute;
        top: -.75em;
        left: 0;
        right: 0;
        transform: scale(0, 1);
        transition: transform ease-in-out 250ms;        
    }

    nav a:hover::before {
        transform: scale(1, 1);
    }

}

/* ??? */
@media all and (max-width: 800px) {

    .pricing {
        flex-direction: column;
    }
    
    .pricing > * {
        order: 999;

    }

    .pricing .option {
        margin: 35px;
    }

    .cta:hover {
        transform: scale(1.025);
    }

    .prod-features {
        flex-direction: column;
    }

    .feature {
        padding-bottom: 50px;
    }
}

